# Ceres

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  compose.yml  docker-compose.yml
.github/workflows/: release.yml
crates/ceres-cli/: Cargo.toml  README.md
crates/ceres-cli/src/: config.rs  lib.rs  main.rs
crates/ceres-client/: Cargo.toml  README.md
crates/ceres-client/src/: ckan.rs  gemini.rs  lib.rs
crates/ceres-core/: Cargo.toml  README.md
crates/ceres-core/src/: config.rs  error.rs  lib.rs  models.rs  sync.rs
crates/ceres-db/: Cargo.toml
crates/ceres-db/src/: repository.rs
examples/: portals.toml
migrations/: 202511290001_init.sql
src/: config.rs  lib.rs  main.rs  models.rs
src/clients/: ckan.rs  openai.rs
src/storage/: pg.rs
