[package]
name = "Ceres"
version = "0.0.1"
edition = "2024"
authors = ["Andrea Bozzo"]
license = "Apache-2.0"

[dependencies]
# --- Core Async & Runtime ---
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"

# --- Web & API ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5.0"
async-openai = "0.31.0"

# --- Data & Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# --- Database ---
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# --- Observability & CLI ---
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"

# --- Error Handling ---
thiserror = "2.0"
anyhow = "1.0"


