[package]
name = "ceres"
version = "0.0.1"
edition = "2024"
authors = ["Andrea Bozzo"]
license = "Apache-2.0"
rust-version = "1.85"
description = "Semantic search engine for open data portals"
repository = "https://github.com/yourusername/ceres"
keywords = ["opendata", "semantic-search", "ckan", "vector-database"]
categories = ["command-line-utilities", "database"]

[dependencies]
# --- Core Async & Runtime ---
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"

# --- Web & API ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5.0"
async-openai = { version = "0.31.0", features = ["embedding"] }

# --- Data & Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# --- Database ---
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
pgvector = { version = "0.4", features = ["sqlx", "serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- Observability & CLI ---
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"

# --- Error Handling ---
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
