[workspace]
members = [
    "crates/ceres-cli",
    "crates/ceres-core",
    "crates/ceres-db",
    "crates/ceres-client",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Andrea Bozzo"]
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/AndreaBozzo/Ceres"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace.dependencies]
# Async runtime
tokio = { version = "1.39", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.4", features = ["sqlx", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Domain types
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# Async utilities
futures = "0.3"

# Hashing
sha2 = "0.10"

# Configuration
toml = "0.9"
dirs = "6.0"

# Internal crates
ceres-core = { path = "crates/ceres-core" }
ceres-client = { path = "crates/ceres-client" }
ceres-db = { path = "crates/ceres-db" }
