[package]
name = "ceres-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and error handling for Ceres"
keywords = ["ckan", "open-data", "semantic-search", "embeddings"]
categories = ["data-structures"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Domain types
uuid.workspace = true
chrono.workspace = true

# Database types (for Vector in models)
pgvector.workspace = true
sqlx.workspace = true

# Hashing for delta detection
sha2.workspace = true

# Configuration
toml.workspace = true
dirs.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
