[package]
name = "ceres-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database repository layer for Ceres with pgvector support"
keywords = ["postgres", "pgvector", "vector-database", "embeddings"]
categories = ["database"]

[dependencies]
# Internal
ceres-core.workspace = true

# Database
sqlx.workspace = true
pgvector.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Domain types
uuid.workspace = true
chrono.workspace = true
